avoid shiny creation

--- a/css.Rmd
+++ b/css.Rmd
@@ -34,7 +34,7 @@ Compare:
 
 (no `fluidPage`)
 
-```{r css-1}
+```{r css-1, eval=FALSE}
 library(shiny)
 ui <- function(request){
   tagList(
@@ -58,7 +58,7 @@ shinyApp(ui, server)
 
 to (with `fluidPage`):
 
-```{r css-2}
+```{r css-2, eval=FALSE}
 library(shiny)
 ui <- function(request){
   fluidPage(
@@ -145,7 +145,7 @@ Note that the good practice is considered to be the integration of an external f
 
 If you need to add style to one specific element, you can write it straight inside the HTML tag:
 
-```{r css-1-bis}
+```{r css-1-bis, eval=FALSE}
 library(shiny)
 ui <- function(request){
   tagList(
@@ -173,7 +173,7 @@ If you had a `tags$style()` somewhere inside your UI code (generally at the very
 
 Here is an example: 
 
-```{r css-2-bis}
+```{r css-2-bis, eval=FALSE}
 library(shiny)
 ui <- function(request){
   tagList(
