--- a/optimizing-shiny-code.Rmd
+++ b/optimizing-shiny-code.Rmd
@@ -119,7 +119,7 @@ In some cases you'll have to configure the size policy, but in most cases the de
 
 Here is an example: 
 
-```{r optimizing-shiny-code-4}
+```{r optimizing-shiny-code-4, eval=FALSE}
 library(shiny)
 ui <- function(request){
   tagList(
@@ -151,7 +151,7 @@ If you try this app, the first rendering of the three plots will take a little b
 
 And if we apply what we've just sen with `{memoise}`:
 
-```{r optimizing-shiny-code-5}
+```{r optimizing-shiny-code-5, eval=FALSE}
 con <- DBI::dbConnect(
   RSQLite::SQLite(), 
   dbname = ":memory:"
