--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ favicon: img/favicon.ico
 ```{r index-1, include = FALSE}
 knitr::opts_chunk$set( 
   comment = "", 
-  cache = TRUE
+  cache = FALSE
 )
 ```
 
