Update gitignore with book files
- Correct reference to prototype
- Verified last 100 commits for potential loss: OK
- prototyping-fakir-shinipsum was previously included in
step-by-step-prototype. It can be removed.

--- a/prototyping-rmd-first.Rmd
+++ b/prototyping-rmd-first.Rmd
@@ -21,7 +21,7 @@ All this manipulations do not require the interactivity of the Shiny application
 We propose to divide the different parts of your Shiny application into multiple Rmarkdown files where you present and develop the content.  
 You may want to create one Rmarkdown file for each page / tab of the graphical interface.
 The static development will simplify the multiple tests necessary during development to verify that algorithms output the correct results, to propose different colors combinations for your graphs, to improve the speed of operations, ...
-You can use some dataset examples from real cases, small reproducible examples, or from fake datasets (See §\@ref(proto-tools)).
+You can use some dataset examples from real cases, small reproducible examples, or from fake datasets (See §\@ref(stepprotopype)).
 
 
 ## Fill the Rmd files
