Switch to CRC-PRESS templates
- CRC PRESS HTML template, with supplemental ThinkR css
- CRC PRESS PDF template
- CRC PRESS EPUB template
- Auto-publication of PDF and EPUB **not** set in Travis
- Rename book to "engineering-production-grade-shiny-apps"
- Update README

closes #115

--- a/css.Rmd
+++ b/css.Rmd
@@ -19,9 +19,9 @@ For example, here is what [rtask.thinkr.fr](https://rtask.thinkr.fr) looks like:
 
 And here is what it looks like without CSS:
 
-![](rtask_without_css.png)
+![](img/rtask_without_css.png)
 
-![](rtask_without_css2.png)
+![](img/rtask_without_css2.png)
 
 CSS now seems pretty useful right?
 
