--- a/workflow.Rmd
+++ b/workflow.Rmd
@@ -32,9 +32,9 @@ In this step 3, you'll be working on the core engine of the application.
 If you're planning on building a robust Shiny application, you'll have to start using the correct development tools.
 In this part, you'll see how you can upgrade your development workflow using [{golem}](https://thinkr-open.github.io/golem/), a package which has been created to help you design a robust and maintainable Shiny application.
 
-## Part 4: Secure 
+## Part 4: Strengthen 
 
-_Securing_ your app is ensuring your application will last forever.
+_Strengthening_ your app is ensuring your application will last forever.
 This might seem like a hard task, but some good practices will help you all along life-cycle of the app.
 In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of Shiny applications.
 
