--- a/workflow.Rmd
+++ b/workflow.Rmd
@@ -4,33 +4,36 @@ The recommended workflow for building successful Shiny Apps happens in five part
 
 ## Part 1: Design 
 
-The _Design_ part is the time when you think about how you will conceive the application, before actually  writing any line of code. 
-It's not Shiny nor R specific: it's something software engineers have been doing for any software or web application: discuss with the clients, the end-users, and the developers that will work on the project. 
-In this first part, you'll discover some tools that will help you define how the application will be build, that is to say somewhere between users' dreams, what's technically possible, and the time you've got for building it.  
+The _Design_ part is the time when you think about how you will conceive the application, before actually writing any line of code. 
+It is not Shiny nor R specific: it is something software engineers do for any software or web application: discuss with the clients, the end-users, and the developers who will work on the project. 
+In this first part of the workflow, you will discover some tools that will help you define how the application will be build.
+This means somewhere between users' dreams, what is technically possible, and the time you have to build the application.  
 
 ## Part 2: Prototype 
 
-The _Prototype_ step is the one during which you'll be building the front-end and the back-end, but separately.
-As you may know, a Shiny application is an interface used to communicate information to the end-users. The general appearance, position of the inputs and outputs as well as graphical interactions need to be chosen with care. 
-On the other hand, the back-end should be built carefully: people will potentially make decision based on what they learn from your app. 
-That's why you should take extra care building the UI, but also building the back-end. 
+The _Prototype_ part is the one during which you will build the front-end and the back-end, but separately.
+As you may know, a Shiny application is an interface used to communicate information to the end-users. 
+The general appearance, position of the inputs and outputs as well as graphical interactions need to be chosen with care. 
+On the other hand, the back-end should be built carefully: the end users will potentially make decisions based on what they learn from your app. 
+That is why you should take extra care building the UI, but also building the back-end. 
 
-In this part, we will be talking about two processes: 
+Here, we advise to build the two sides of the app separately: the core back-end can be outputted to HTML documents that can be sent and validated by the clients, and the front-end can be tested without actual implementation of the back-end.
+This workflow relies on two separate processes:  
 
 + A 'UI-first' approach, with tools to build the skeleton of the application before engineering its core.  
 
-+ A 'Rmd-first' approach, which focuses on the actual computation of the outputs. 
-The idea here is to prototype the outputs outside of the application reactivity.
-This 'Rmd first' method is designed to help you focus on the core of the application outside of any reactive context, and also to develop functions and write the documentation with visual outputs and example data.
++ A 'Rmd-first' approach, which focuses on the actual computation of the outputs, out of the UI and its reactivity.
+<!-- COMMENT: This will be presented extensively in the dedicated part, let us keep it small here. With some mystery... -->
+<!-- The idea here is to prototype the targeted outputs outside of the application reactivity. -->
+<!-- This 'Rmd first' method is designed to help you focus on the core of the application outside of any reactive context, and also to develop functions and write the documentation with visual outputs and example data. -->
 
-Here, we are building the two sides of the app separately: the core back-end can be outputted to HTML documents that can be sent and validated by the clients, and the front-end can be tested without actual implementation of the back-end.
 
 ## Part 3: Build 
 
-The _Build_ step is the one where you'll be working on combining the business (or back-end) logic with the front-end. 
-In this step 3, you'll be working on the core engine of the application. 
-If you're planning on building a robust Shiny application, you'll have to start using the correct development tools.
-In this part, you'll see how you can upgrade your development workflow using [{golem}](https://thinkr-open.github.io/golem/), a package which has been created to help you design a robust and maintainable Shiny application.
+The _Build_ part is the one where you will combine the business (or back-end) logic with the front-end. 
+In this part 3, you will work on the core engine of the application. 
+If you plan on building a robust Shiny application, you will have to start using the correct development tools.
+You will see how to upgrade your development workflow using [{golem}](https://thinkr-open.github.io/golem/), a package which created to help you design a robust and maintainable Shiny application.
 
 ## Part 4: Strengthen 
 
@@ -42,5 +45,5 @@ In this part, we will go through unit tests, reproducible development environmen
 
 To _Deploy_ is to send your application to production.
 Being exhaustive here is an impossible task as there are numerous ways to make your application accessible to its targeted users.
-But we'll try to provide some!
-In this part, we will quickly present a series of methods to deploy your application on various environments,  and show how you can use `{golem}` to make this task easier. 
+But we will try to provide some!
+In this part, we will quickly present a series of methods to deploy your application on various environments, and show how you can use `{golem}` to make this task easier. 
