Correct typos in issues
- closes #124
- closes #125
- closes #126
- closes #127
- closes #128

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -43,9 +43,9 @@ But what do we mean by complexity?
 Getting a clear definition is not an easy task^[
 Ironic right?
 ]
-as it very depends on who is concerned and who you are talking to.
+as it very much depends on who is concerned and who you are talking to.
 A good definition is the one from [The Art of Unix Programming](http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#id287833): _"Complex software is harder to think about, harder to test, harder to debug, and harder to maintain — and above all, harder to learn and use."_
-But let us try to come with a definition that will serve us in the context of engineering Shiny applications. 
+But let us try to come up with a definition that will serve us in the context of engineering Shiny applications. 
 When building software, we can think of complexity from two points of view: the complexity as it is seen by the coder, and the complexity as it is seen by the customer / end user
 ^[from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"].
 
@@ -104,7 +104,7 @@ But this complexify the interface for the users who have to perform another acti
 Another good example is `{shiny}`'s `dateRangeInput()` function.
 This function requires the user to choose a starting date and an ending date.
 However, the function allows to choose a start posterior to the end (which is the behavior of the JavaScript plugin used in `{shiny}` to create this input).
-If theses dates are used to filter data upper tjan starting date and lower than ending date, this behaviour will be problematic for your application.
+If theses dates are used to filter data later than starting date and earlier than ending date, this behaviour will be problematic for your application.
 Handling this special case is doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end
 ^[see [shiny/issues/2043#issuecomment-525640738](https://github.com/rstudio/shiny/issues/2043#issuecomment-525640738){target="_blank"} for an example].
 That solution increases implementation complexity, while leaving it as is requires the user to think about whether or not the starting date is before the ending date, thus increasing the interface complexity.
