--- a/16-common-app-caveats.Rmd
+++ b/16-common-app-caveats.Rmd
@@ -22,8 +22,8 @@ At first, `observe()` seems easier to implement, and feels like a shortcut as yo
 But the truth is that this stairway doesn't lead to heaven. 
 
 Let's stop and think about `observe()` for a minute. 
-This function updates __every time a reactive object it contains is invalidated__. Y
-es, this works well if you have a small amount of reactive objects in the observer, but that gets tricky whenever you start adding things inside your `observe()`, as you might be launching a computation 10 times if your reactive scope contains 10 reactive objects that are somehow invalidated in chain. 
+This function updates __every time a reactive object it contains is invalidated__. 
+Yes, this works well if you have a small amount of reactive objects in the observer, but that gets tricky whenever you start adding things inside your `observe()`, as you might be launching a computation 10 times if your reactive scope contains 10 reactive objects that are somehow invalidated in chain. 
 And believe me, we've seen pieces of code where the `observe()` contains hundreds of lines of code, with reactives objects all over the place.
 
 For example, let's start with that:
