--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -225,7 +225,7 @@ Putting your application in production means that it should be deployed on a com
 #### Local deployment
 
 With a package, you can use classical tools to locally install your Shiny application.
-Inded, a Shiny App as a standard R package can be built as a `tar.gz`, sent to your colleagues, friends, and family, and even to the CRAN. 
+Indeed, a Shiny App as a standard R package can be built as a `tar.gz`, sent to your colleagues, friends, and family, and even to the CRAN. 
 It can also be installed in any R-package repository.
 You can then install your packaged App along with its dependencies using the appropriate `remotes::install_*()` command.
 And, if you built your app with `{golem}`, you will launch the app using: 
@@ -716,7 +716,9 @@ For example:
 
 #### The "stratégie du grand R6"
 
-Similarly to the "stratégie du petit r", we can create an R6 object which is pass along the modules. This R6 object is not a reactive object, making it more robust to the complexity of handling reactivity invalidation across modules. 
+Similarly to the "stratégie du petit r", we can create an R6 object, which is passed along the modules. 
+This R6 object is not a reactive object.
+This reduces reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 
 This methods is explained in details in chapter [Reactivity anti-patterns](#optim-caveat) of this book. 
 
